# test_task

./: .env.template  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py
src/api/: dependencies.py  players.py  teams.py
src/migrations/: env.py
src/migrations/versions/: 2026_02_07_1532-9124dba705ab_add_teams.py  2026_02_07_1654-65115df6570a_add_players.py
src/models/: __init__.py  players.py  teams.py
src/repos/: base.py  players.py  teams.py
src/repos/mappers/: base.py  mappers.py
src/schemas/: __init__.py  players.py  teams.py
src/services/: base.py  players.py  teams.py
src/utils/: db_manager.py  exceptions.py  http_exceptions.py
