[project]
name = "online-ticket-office"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi[standard]>=0.128.4",
    "pydantic-settings>=2.12.0",
    "pydantic[standard]>=2.12.5",
    "ruff>=0.15.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
